# IO-Systems

./: .gitignore  CMakeLists.txt
Lab1/: CMakeLists.txt  Makefile
Lab1/src/: bus_matrix.h  cpu.h  input_capture.h  main.cpp  mux.h  test_oscillator.h  timer.h
Lab2/: main.c
Lab3/: BRAM_Interconnect.v  Decoder.v  Demux.v  Fifo_control.v  Fifo_control_calc.v  Fifo_control_calc_v2.v  InputCapture.v  Mux.v  Prescaler.v  Timer.v  copy_files.sh  main.c  sim_tb.v
